# gold-dataset-editor

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  slots_schema.yaml
src/gold_dataset_editor/: __init__.py  __main__.py  app.py  cli.py  config.py
src/gold_dataset_editor/api/: __init__.py  entries.py  export.py  files.py
src/gold_dataset_editor/models/: __init__.py  entry.py  session.py
src/gold_dataset_editor/static/css/: styles.css
src/gold_dataset_editor/static/js/: app.js  hotkeys.js  validation.js
src/gold_dataset_editor/storage/: __init__.py  cleaner.py  indexer.py  reader.py  writer.py
src/gold_dataset_editor/templates/: base.html  index.html
src/gold_dataset_editor/templates/partials/: entry_card.html  error.html  file_content.html
tests/: conftest.py  test_api.py  test_indexer.py  test_reader.py  test_writer.py
