[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gold-dataset-editor"
version = "0.1.0"
description = "Web-based editor for gold datasets in JSONL format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
gold-dataset-editor = "gold_dataset_editor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gold_dataset_editor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
